# OAiP

./: Makefile  VD-games  VD_games  main.py  pyproject.toml
games_project_vituk/VD_games/: cli.py  engine.py
games_project_vituk/VD_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
games_project_vituk/VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  VD_prime.py  VD_progression.py
