[project]
name = "oaip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["games_project_vituk"]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[project.scripts]
VD-games = "games_project_vituk.VD_games.scripts.VD_games:main"
VD-even = "games_project_vituk.VD_games.scripts.VD_even:main"
